@@ -1,3 +1,11 @@
+2011-07-01  Nick Clifton  <nickc@redhat.com>
+
+	PR sim/12737
+	* iwmmxt.c (WCMPGT): Sign extend 32-bit values before performing a
+	signed compare.
+	(WMAC): Extend computed result before adding to result register.
+	(WRSA): Sign extend 32-bit values before shifting.
+
 2011-04-16  Mike Frysinger  <vapier@gentoo.org>
 
 	* wrapper.c (sim_complete_command): New stub function.
